fix DT-1248, align search products field in products filter

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1292,6 +1292,12 @@ footer.blog-post-metadata time {
         }
     }
 }
+
+.widget.ecomproductslist .productlist-filter .productlist-display-form .form-group {
+    vertical-align: top;
+}
+
+
 .ecom-productslist-product {
     margin-top: 2em;
     .ecom-productslist-image-wrap {
